fix the form-box to prevent overflow when viewport height is reduced.

--- a/bed-allocation-system/css/login.css
+++ b/bed-allocation-system/css/login.css
@@ -3,14 +3,17 @@
   padding: 0;
   font-family: sans-serif;
 }
-.intro {
-  height: 100%;
-  width: 100%;
+html {
+   min-height: 100%;
   background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(../login-images/background2.jpg);
-  background-position: center;
   background-size: cover;
-  position: absolute;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+
 }
+
+
 .form-box {
   width: 380px;
   height: 480px;
@@ -24,7 +27,7 @@
   width: 220px;
   margin: 35px auto;
   position: relative;
-  box-shadow: 0 0 20px 9px #ff61241f;
+  box-shadow: 0 0 20px 9px #73c2fb;
   border-radius: 30px;
 }
 .toggle-btn {
@@ -41,7 +44,7 @@
   position: absolute;
   width: 110px;
   height: 100%;
-  background: linear-gradient(to right, #ff105f,#ffad86);
+  background: linear-gradient(to right, #73c2fb,#73c2fb);
   border-radius: 30px;
   transition:.5s;
 }
@@ -68,7 +71,7 @@
   cursor: pointer;
   display: block;
   margin: auto;
-  background: linear-gradient(to right,#ff105f,#ffad06);
+  background: linear-gradient(to right,#73c2fb,#73c2fb);
   border: 0;
   outline: none;
   border-radius: 30px;
